@@ -1,7 +1,6 @@
 package de.tum.in.www1.artemis.domain.plagiarism.text;
 
 import java.util.Comparator;
-import java.util.stream.Collectors;
 
 import javax.persistence.Entity;
 
@@ -22,7 +21,7 @@ public class TextPlagiarismResult extends PlagiarismResult<TextSubmissionElement
      */
     public void convertJPlagResult(JPlagResult result) {
         // sort and limit the number of comparisons to 500
-        var comparisons = result.getComparisons().stream().sorted(Comparator.comparingDouble(JPlagComparison::similarity).reversed()).limit(500).collect(Collectors.toList());
+        var comparisons = result.getComparisons().stream().sorted(Comparator.comparingDouble(JPlagComparison::similarity).reversed()).limit(500).toList();
         // only convert those 500 comparisons to save memory and cpu power
         for (var jPlagComparison : comparisons) {
             var comparison = PlagiarismComparison.fromJPlagComparison(jPlagComparison);
